--- a/src/main/resources/templates/blog-sidebar.html
+++ b/src/main/resources/templates/blog-sidebar.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Your vacation, tours and travel theme needs are all met at emprise." />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tour Travel Website Template | Emprise</title>
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="./assets/favicon.ico" />
-    <!-- Plugins CSS -->
-    <link rel="stylesheet" href="./styles/plugins.css" />
-    <!-- Main CSS -->
-    <link rel="stylesheet" href="./styles/main.css" />
-  </head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sa="http://www.w3.org/1999/xhtml">
+<head th:replace="common::head"><title></title></head>
 
-  <body class="rlr-body">
-    <!-- Main Content -->
+<body class="rlr-body">
+<!-- 引用导航栏 -->
+<div th:replace="common::navigation"></div>
     <main id="rlr-main" class="rlr-main--fixed-top">
       <div class="container">
         <div class="row rlr-search-results-page__product-details rlr-section__py">
@@ -87,12 +77,6 @@
           <section class="col-xl-9 rlr-search-results-page__product-list">
             <div class="row rlr-listings__header">
               <!-- Breadcrumb -->
-              <nav aria-label="breadcrumb">
-                <ol class="breadcrumb rlr-breadcrumb__items">
-                  <li class="breadcrumb-item rlr-breadcrumb__item"><a href="/">Home</a></li>
-                  <li class="breadcrumb-item rlr-breadcrumb__item"><a href="/">Destination</a></li>
-                  <li class="breadcrumb-item rlr-breadcrumb__item active" aria-current="page">Tour</li>
-                </ol>
               </nav>
               <h1 class="rlr-section__heading--main">游记</h1>
             </div>
@@ -293,9 +277,8 @@
           </section>
         </div>
       </div>
+      <div th:replace="common::footer"></div>
     </main>
-    <!-- Scripts -->
-    <script src="./vendors/navx/js/navigation.min.js" defer></script>
-    <script src="./js/main.js" defer></script>
+<div th:replace="common::footerJs"></div>
   </body>
 </html>
