--- a/src/main/resources/templates/collections.html
+++ b/src/main/resources/templates/collections.html
@@ -64,7 +64,7 @@
                                         <tbody>
                                             <tr class="rlr-data-table__row woocommerce-orders-table__row woocommerce-orders-table__row--status-on-hold order">
                                                 <td class="rlr-data-table__cell woocommerce-orders-table__cell woocommerce-orders-table__cell-order-number" data-title="Order">
-                                                    <a href="./product-detail-page.html"> #555 </a>
+                                                    <a href="destination-detail.html"> #555 </a>
                                                 </td>
                                                 <td class="rlr-data-table__cell woocommerce-orders-table__cell woocommerce-orders-table__cell-order-date" data-title="Date">
                                                     <time datetime="2022-04-20T08:01:42+00:00"> April 20, 2022 </time>
@@ -74,7 +74,7 @@
                                                     游记
                                                 </td>
                                                 <td class="rlr-data-table__cell woocommerce-orders-table__cell woocommerce-orders-table__cell-order-actions" data-title="Actions">
-                                                    <a href="./product-detail-page.html" class="rlr-data-table__link woocommerce-button button view"> 查看 </a>
+                                                    <a href="destination-detail.html" class="rlr-data-table__link woocommerce-button button view"> 查看 </a>
                                                 </td>
                                             </tr>
                                         </tbody>
