--- a/src/main/resources/templates/destination-detail.html
+++ b/src/main/resources/templates/destination-detail.html
@@ -648,11 +648,11 @@
                         </button>
                         <span class="rlr-product-detail-header__helptext rlr-js-helptext"></span>
                       </div>
-                      <a href="./product-detail-page.html" class="btn rlr-button product-card-buttonrlr-button--medium rlr-button--rounded rlr-button--brand"> Explore </a>
+                      <a href="destination-detail.html" class="btn rlr-button product-card-buttonrlr-button--medium rlr-button--rounded rlr-button--brand"> Explore </a>
                     </div>
                   </div>
                 </div>
-                <a href="./product-detail-page.html" class="rlr-product-card__anchor rlr-product-card__anchor--featured"></a>
+                <a href="destination-detail.html" class="rlr-product-card__anchor rlr-product-card__anchor--featured"></a>
               </article>
               <!-- Summary -->
               <div class="rlr-product-card--featured__summary">
@@ -682,11 +682,11 @@
                         </button>
                         <span class="rlr-product-detail-header__helptext rlr-js-helptext"></span>
                       </div>
-                      <a href="./product-detail-page.html" class="btn rlr-button product-card-buttonrlr-button--medium rlr-button--rounded rlr-button--brand"> Explore </a>
+                      <a href="destination-detail.html" class="btn rlr-button product-card-buttonrlr-button--medium rlr-button--rounded rlr-button--brand"> Explore </a>
                     </div>
                   </div>
                 </div>
-                <a href="./product-detail-page.html" class="rlr-product-card__anchor rlr-product-card__anchor--featured"></a>
+                <a href="destination-detail.html" class="rlr-product-card__anchor rlr-product-card__anchor--featured"></a>
               </article>
               <!-- Summary -->
               <div class="rlr-product-card--featured__summary">
@@ -716,11 +716,11 @@
                         </button>
                         <span class="rlr-product-detail-header__helptext rlr-js-helptext"></span>
                       </div>
-                      <a href="./product-detail-page.html" class="btn rlr-button product-card-buttonrlr-button--medium rlr-button--rounded rlr-button--brand"> Explore </a>
+                      <a href="destination-detail.html" class="btn rlr-button product-card-buttonrlr-button--medium rlr-button--rounded rlr-button--brand"> Explore </a>
                     </div>
                   </div>
                 </div>
-                <a href="./product-detail-page.html" class="rlr-product-card__anchor rlr-product-card__anchor--featured"></a>
+                <a href="destination-detail.html" class="rlr-product-card__anchor rlr-product-card__anchor--featured"></a>
               </article>
               <!-- Summary -->
               <div class="rlr-product-card--featured__summary">
