--- a/src/main/resources/templates/gallery-page.html
+++ b/src/main/resources/templates/gallery-page.html
@@ -26,7 +26,7 @@
               <span class="rlr-section__title--sub">Sost Brilliant reasons Emprise should be your one-stop-shop!</span>
             </div>
             <div class="button-row">
-              <a href="./search-results--left-sidebar.html" class="btn rlr-button rlr-button--large rlr-button--rounded rlr-button--brand"> View tours </a>
+              <a href="destination.html" class="btn rlr-button rlr-button--large rlr-button--rounded rlr-button--brand"> View tours </a>
             </div>
           </div>
           <div class="rlr-lightbox--gallery">
