--- a/src/main/resources/templates/account-details.html
+++ b/src/main/resources/templates/account-details.html
@@ -1,24 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Your vacation, tours and travel theme needs are all met at emprise." />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tour Travel Website Template | Emprise</title>
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="./assets/favicon.ico" />
-    <!-- Plugins CSS -->
-    <link rel="stylesheet" href="./styles/plugins.css" />
-    <!-- Main CSS -->
-    <link rel="stylesheet" href="./styles/main.css" />
-    <link rel="stylesheet" href="./css/bootstrapt.min.css" />
-    <link rel="stylesheet" href="css/style.css"/>
-    <link rel="stylesheet" href="css/skins/default.css"/>
-    <link rel="stylesheet" href="css/font.min.css"/>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sa="http://www.w3.org/1999/xhtml">
+<head th:replace="common::head"><title></title></head>
 
 <body class="rlr-body">
+<!-- 引用导航栏 -->
+<div th:replace="common::navigation"></div>
     <!-- Main Content -->
     <main id="rlr-main" class="rlr-main--fixed-top">
         <div class="rlr-section__content--md-top">
@@ -26,6 +13,7 @@
                 <div class="container">
                     <div class="container">
                         <div class="row">
+                            <div th:replace="my-account-page-side::aside"></div>
                             <div class="col-lg-9 col-md-12 col-sm-12 col-pad">
                                 <div class="content-area5">
                                     <div class="dashboard-content">
@@ -36,7 +24,7 @@
                                                     <div class="col-lg-3 col-md-3">
                                                         <div class="edit-profile-photo"><img src="https://fastly.jsdelivr.net/gh/lvcong-sys/note_book@master/1677506165156%E5%B8%B8%E7%94%A8%E5%A4%B4%E5%83%8F.png" alt="头像" class="img-fluid">
                                                             <div class="change-photo-btn">
-                                                                <div class="photoUpload"><span><i class="rlr-icon-font flaticon-upload"></i></span><input type="file" class="upload"></div>
+                                                                <div class="photoUpload" type="button" id="buttom"><span style="text-align: center;display: block">点击修改</span><input id="file" name="file" class="upload" type="hidden"></div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -56,7 +44,7 @@
                                                                     <div class="form-group number"><label>邮箱</label><input type="email" name="email" class="form-control" placeholder="Email"></div>
                                                                 </div>
                                                                 <div class="col-lg-12 col-md-12 col-sm-12">
-                                                                    <div class="form-group message"><label>个人介绍</label><textarea class="form-control" name="message" placeholder="Personal info"></textarea></div>
+                                                                    <div class="form-group message"><label>个人介绍</label><textarea class="form-control" name="message" placeholder="写点什么来介绍自己吧！"></textarea></div>
                                                                 </div>
                                                             </div>
                                                         </form>
@@ -98,9 +86,61 @@
                 </div>
             </div>
         </div>
+        <!-- 引用尾部 -->
+        <div th:replace="common::footer"></div>
     </main>
-    <!-- Scripts -->
-    <script src="./vendors/navx/js/navigation.min.js" defer></script>
-    <script src="./js/main.js" defer></script>
+    <div th:replace="common::footerJs"></div>
+<script>
 
+    $(function () {
+        $("#button").click(function () {
+            var form = new FormData();
+            form.append("file", document.getElementById("file").files[0]);
+            $.ajax({
+                url: "/student/upload",        //后台url
+                data: form,
+                cache: false,
+                async: false,
+                type: "POST",                   //类型，POST或者GET
+                dataType: 'json',              //数据返回类型，可以是xml、json等
+                processData: false,
+                contentType: false,
+                success: function (data) {      //成功，回调函数
+                    if (data) {
+                        var pic="/imctemp-rainy/"+data.fileName;
+                        alert(pic);
+                        $("#url img").attr("src",pic);
+                        $("#file1").val("/imctemp-rainy/"+data.fileName)
+                        // alert(JSON.stringify(data));
+
+                    } else {
+                        alert("失败");
+                    }
+
+                },
+                error: function (er) {          //失败，回调函数
+                    alert(JSON.stringify(data));
+                }
+            });
+        });
+
+        $("#t_button").click(function () {
+            //这里分割字符串 /imctemp-rainy/157352875235607c10257539a5f4dcdaab233ca2832a5.jpg
+            //需要用/分割字符先后获取最后一段字符串去上传到后台
+            //alert($("#url img").attr("src"));
+            var img = $("#url img").attr("src");
+            var str = img.split("/");
+            var str_img=str[str.length-1];
+            //alert(str_img);
+            $.post("/student/deleteImages",{filePath:str_img},function(data){
+                alert(data);
+                //这里我们取消上传成功之后去给换成一个暂无图片的一个图
+                $("#url img").attr("src","/imctemp-rainy/11.jpg");
+                $("#file1").val("/imctemp-rainy/11.jpg");
+            });
+        });
+    })
+
+</script>
+</body>
 </html>
