--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
                     <img th:src="@{/assets/images/logos/Logomark.svg}" alt="Logo" />
                   </div>
                   <div class="rlr-authforms__form">
-                    <div class="rlr-authforms__inputgroup"><label class="rlr-form-label rlr-form-label--light"> 邮箱 </label> <input type="text" autocomplete="off" class="form-control form-control--light" name="email" required/></div>
+                    <div class="rlr-authforms__inputgroup"><label class="rlr-form-label rlr-form-label--light"> 邮箱 </label> <input type="email" autocomplete="off" class="form-control form-control--light" name="email" required/></div>
                     <div class="rlr-authforms__inputgroup"><label class="rlr-form-label rlr-form-label--light"> 密码 </label> <input type="password" autocomplete="off" class="form-control form-control--light" name="password" required/></div>
                     <div class="rlr-authforms__forgotpassword">
                       <div class="form-check-inline">
@@ -32,7 +32,7 @@
                     <button type="submit" class="btn mb-3 rlr-button rlr-button--fullwidth rlr-button--primary">登录</button>
                   </div>
                   <div class="rlr-authforms__notes">
-                    <p>没有账号? <a href="signup">注册</a></p>
+                    <p>没有账号? <a th:href="@{/user/signup}">注册</a></p>
                   </div>
                 </form>
               </div>
