--- a/src/main/resources/templates/my-account-page-side.html
+++ b/src/main/resources/templates/my-account-page-side.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sa="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8" />
@@ -37,12 +38,12 @@
                 </div>
                 <div class="container">
                     <div class="row">
-                        <aside class="rlr-sidebar-menu col-lg-3 col-xs-12 mb-5">
+                        <aside class="rlr-sidebar-menu col-lg-3 col-xs-12 mb-5" th:fragment="aside">
                             <div class="rlr-sidebar-menu__wrapper">
                                 <nav class="rlr-sidebar-menu">
                                     <ul class="rlr-sidebar-menu__desktop">
                                         <li>
-                                            <a class="rlr-sidebar-menu__link" href="./my-account-pages--subscription.html">
+                                            <a class="rlr-sidebar-menu__link" href="collections.html">
                                                 <span class="rlr-sidebar-menu__link-icon"><i class="rlr-icon-font flaticon-carbon-money"> </i></span>
                                                 收藏
                                             </a>
