--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -12,24 +12,26 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-4 offset-lg-4">
-                <div class="rlr-authforms">
-                  <div class="rlr-authforms__header">
-                    <img class="mb-2" th:src="@{/assets/images/logos/Logomark.svg}" alt="Logo" />
-                    <h2>创建用户</h2>
-                  </div>
-                  <div class="rlr-authforms__form">
-                    <div class="rlr-authforms__inputgroup"><label class="rlr-form-label rlr-form-label--light"> 昵称 </label> <input type="text" autocomplete="off" class="form-control form-control--light" required /></div>
-                    <div class="rlr-authforms__inputgroup"><label class="rlr-form-label rlr-form-label--light"> 邮箱 </label> <input type="text" autocomplete="off" class="form-control form-control--light" required /></div>
-                    <div class="rlr-authforms__inputgroup">
-                      <label class="rlr-form-label rlr-form-label--light"> 密码 </label> <input type="password" autocomplete="off" class="form-control form-control--light" required />
-                      <p class="help-text">至少8位</p>
+                <form th:action="@{/user/doSignup}" method="post">
+                  <div class="rlr-authforms">
+                    <div class="rlr-authforms__header">
+                      <img class="mb-2" th:src="@{/assets/images/logos/Logomark.svg}" alt="Logo" />
+                      <h2>创建用户</h2>
                     </div>
-                    <button type="submit" class="btn rlr-button rlr-button--fullwidth rlr-button--primary" >点击注册</button>
+                    <div class="rlr-authforms__form">
+                      <div class="rlr-authforms__inputgroup"><label class="rlr-form-label rlr-form-label--light"> 昵称 </label> <input type="text" autocomplete="off" class="form-control form-control--light" required name="nickName"/></div>
+                      <div class="rlr-authforms__inputgroup"><label class="rlr-form-label rlr-form-label--light"> 邮箱 </label> <input type="email" autocomplete="off" class="form-control form-control--light" required name="email"/></div>
+                      <div class="rlr-authforms__inputgroup">
+                        <label class="rlr-form-label rlr-form-label--light"> 密码 </label> <input type="password" autocomplete="off" class="form-control form-control--light" name="password" required />
+                        <p class="help-text">至少8位</p>
+                      </div>
+                      <button type="submit" class="btn rlr-button rlr-button--fullwidth rlr-button--primary" >点击注册</button>
+                    </div>
+                    <div class="rlr-authforms__notes">
+                      <p>已经有账号了? <a th:href="@{/user/login}">登录</a></p>
+                    </div>
                   </div>
-                  <div class="rlr-authforms__notes">
-                    <p>已经有账号了? <a href="login">登录</a></p>
-                  </div>
-                </div>
+                </form>
               </div>
             </div>
           </div>
